<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#9c9c9c"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewMascota"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imagen_lista"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_nombre"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_edad"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/especieTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_especie"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/estadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_estado"
        android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>