<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C00BCD4"
    android:padding="16dp">


    <TextView
        android:id="@+id/textViewBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/text_main"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPerfilMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_botones"
        android:layout_marginTop="20dp"
        android:text="@string/boton_tus_mascotas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBienvenida" />


    <Button
        android:id="@+id/buttonComunidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_botones"
        android:layout_marginTop="20dp"
        android:text="@string/boton_comunidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPerfilMascota" />


    <Button
        android:id="@+id/buttonArticulosConsejos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_botones"
        android:layout_marginTop="20dp"
        android:text="@string/boton_artivulosyconsejos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonComunidad" />


    <Button
        android:id="@+id/buttonAdopcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_botones"
        android:layout_marginTop="20dp"
        android:text="@string/boton_adopcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonArticulosConsejos" />

    <Button
        android:id="@+id/buttonCerrarSesion"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/estilo_botones"
        android:text="@string/boton_cerrar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/textViewBienvenida"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>