<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C00BCD4"
    tools:context="com.aaron.mascotamania.RegistrarUsuarioActivity">

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_usuario"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/text_registro"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistarse"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:background="@drawable/estilo_botones"
        android:text="@string/boton_registarse"
        app:layout_constraintStart_toStartOf="@+id/editTextContraseña"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_volver"
        android:background="@drawable/estilo_botones"
        app:layout_constraintEnd_toEndOf="@+id/editTextContraseña"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_correo"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsuario"
        app:layout_constraintStart_toStartOf="@+id/editTextUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />
</androidx.constraintlayout.widget.ConstraintLayout>