<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C00BCD4"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_comunidad"
        android:textSize="20sp" />


    <ListView
        android:id="@+id/listViewForo"
        android:layout_width="match_parent"
        android:layout_height="612dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonAgregarPregunta"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:background="@drawable/estilo_botones"
        android:text="@string/boton_agregar_pregunta"
        app:layout_constraintStart_toStartOf="@+id/listViewForo"
        app:layout_constraintTop_toBottomOf="@+id/listViewForo" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_botones"
        android:text="@string/boton_volver"
        app:layout_constraintEnd_toEndOf="@+id/listViewForo"
        app:layout_constraintTop_toBottomOf="@+id/listViewForo" />
</androidx.constraintlayout.widget.ConstraintLayout>