<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C00BCD4"
    tools:context="com.aaron.mascotamania.TusMascotasActivity">

    <ListView
        android:id="@+id/listViewTusMascotas"
        android:layout_width="399dp"
        android:layout_height="518dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTusMascotas"
        tools:layout_editor_absoluteX="6dp" />

    <Button
        android:id="@+id/buttonAñadirMAscotas"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:background="@drawable/estilo_botones"
        android:text="@string/boton_añadir_mascota"
        app:layout_constraintStart_toStartOf="@+id/listViewTusMascotas"
        app:layout_constraintTop_toBottomOf="@+id/listViewTusMascotas" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_botones"
        android:layout_marginTop="4dp"
        android:text="@string/boton_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewTusMascotas" />

    <TextView
        android:id="@+id/textViewTusMascotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/boton_tus_mascotas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/listViewTusMascotas"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>